Bug 393996 - Umbrello raises confirmation dialog for deleting an association where no association is involved
Summary: Umbrello raises confirmation dialog for deleting an association where no asso...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-08 11:58 UTC by Ralf Habacker
Modified: 2018-05-20 11:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.25.80 (KDE Applications 18.07.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-05-08 11:58:11 UTC
How to reproduce:
1. start umbrello
2. add a use case diagram
3. add an actor and two use cases named 'A' and 'B'
4. connect the actor with use case 'A'
5. Delete use case 'B'

What happens ?
A confirmation dialog is displayed asking for permission to delete an association

What is expected ?
Because no association is related, the confirmation dialog should not be shown
Comment 1 Ralf Habacker 2018-05-20 11:50:49 UTC
Git commit 32087a1d1bd7a5f1cda5c2aa5ffe8dd918ee79b8 by Ralf Habacker.
Committed on 20/05/2018 at 11:50.
Pushed by habacker into branch 'master'.

Fix 'Umbrello raises confirmation dialog for deleting an association where no association is involved'
FIXED-IN: 2.25.80 (KDE Applications 18.07.80)

M  +61   -27   umbrello/umlscene.cpp
M  +2    -0    umbrello/umlscene.h

https://commits.kde.org/umbrello/32087a1d1bd7a5f1cda5c2aa5ffe8dd918ee79b8