Fix 'Umbrello raises confirmation dialog for deleting an association where no association is involved'

BUG:393996
FIXED-IN: 2.25.80 (KDE Applications 18.07.80)